syntax = "proto3";

package my_service;

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The greeting service definition.
service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply);
  // Server streaming - like Spanner's streaming results
  rpc StreamNumbers(HelloRequest) returns (stream HelloReply);
}


